--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 body {
-    font-family: 'Montserrat', sans-serif;
-  }
-  
+  font-family: 'Montserrat', sans-serif;
+}
+
+html,
+body,
+:root {
+  height: 100%;
+}
