--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,20 @@ body,
 :root {
   height: 100%;
 }
+
+.background {
+  background: url('../public/image (24) 1.svg');
+  background-size: 100% auto; /* Set background size to cover the entire width and auto height */
+  background-repeat: no-repeat; /* Prevent background from repeating */
+  background-position: center; /* Center the background image horizontally */
+  /* margin: 20% 0; Set top and bottom margins to 20% */
+}
+
+.border{
+  border-left-width:  15px;
+  border-left-color: black;
+border-top: 15px black solid;
+border-bottom: 15px black solid;
+border-radius: 24px;
+border-right-color: black;
+}
